# MARCD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  alloc.py  backtest.py  baselines.py  scenario.py  utils.py
src/marcd/: cli.py  diagnostics.py  experiments.py  regime.py  signal.py  utils.py
tests/: test_imports.py  test_smoke_backtest.py  test_utils.py
