[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marcd"
version = "0.1.0"
description = "Multi-Agent Regime-Conditioned Diffusion for CVaR Allocation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ali Atiah Alzahrani" }
]
license = { text = "MIT" }
keywords = ["finance", "portfolio", "diffusion", "hmm", "cvar", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "tqdm>=4.66",
  "cvxpy>=1.4",
]

[project.optional-dependencies]
full = [
  "hmmlearn>=0.3",
  "statsmodels>=0.14",
  "torch>=2.2; platform_system != 'Darwin' or platform_machine != 'arm64'",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "black>=24.4",
  "isort>=5.13",
  "pre-commit>=3.7",
] 

[project.scripts]
marcd = "marcd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
